--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Logos -->
   <header class="logo-bar">
     <img src="assets/logo1.png" alt="Logo 1" />
-    <img src="assets/logo2.png" alt="Logo 2" />
+   <!-- <img src="assets/logo2.png" alt="Logo 2" />-->
   </header>
 
   <!-- Breaking News -->
