--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 
   </div>
 
+  <footer class="site-footer">
+  <p>Powered by the Lebanese Red Cross © 2025</p>
+</footer>
+
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
